# firstmed

./: .gitignore  .replit  .vercelignore  DEPLOYMENT.md  Dockerfile  GOOGLE_MAPS_SETUP.md  Procfile  README.md  config.py  convert_image.py  deploy.sh  docker-compose.yml  index.html  index.py  main.py  main_simple.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  test_app.py  test_imports.py  test_minimal.py  test_vercel.py  vercel.json  wsgi.py
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo
.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
.next/dev/types/: routes.d.ts  validator.ts
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _global-error.html  _global-error.rsc  about.html  (+14 more)
.next/types/: routes.d.ts  validator.ts
api/: index.py  requirements.txt
firstmed-nextjs/: package-lock.json  package.json
public/: manifest.json  robots.txt
src/app/: globals.css  layout.tsx  page.tsx
src/components/: GoogleMap.tsx
static/: IMG_1662.heic
static/css/: style.css
templates/: 404.html  500.html  about.html  base.html  booking.html  contact.html  home.html  index.html  services.html
(+321 files in other folders)
