[tool.poetry]
name = "firstmed-ems"
version = "0.1.0"
description = "First Med Care EMS - Medical Transport Booking System"
authors = ["First Med Care EMS <24hourserviceems@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"